--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -5,9 +5,10 @@
 \usepackage[utf8]{inputenc}
 \usepackage{microtype}
 \usepackage[english,main=ngerman]{babel}
-\usepackage{lipsum}
 
-\usetheme[lightmode-fill]{digital-minimal}
+% \colorlet{mycolor}{green!70!yellow!80!orange!85!black} % todo
+% color=mycolor
+\usetheme[darkmode]{digital-minimal}
 
 \title{Example Presentation}
 \titlenumber{1}
@@ -23,6 +24,10 @@
 \addbibresource{example.bib}
 
 \setfootmarker{EidI~\faAngleRight\ Tutorium 1}
+
+\outro{\vfill\begin{center}
+    \huge\sbfamily Danketsöön
+\end{center}\vfill}
 
 \begin{document}
 
