--- a/example.bib
+++ b/example.bib
@@ -4,6 +4,7 @@
   isbn      = {9780198520115},
   series    = {International series of monographs on physics},
   year      = {1981},
+  url       = {https://books.google.de/books?lr=&id=XehUpGiM6FIC},
   publisher = {Clarendon Press},
   keywords  = {physics}
 }
@@ -17,7 +18,7 @@
   number   = {10},
   pages    = {891--921},
   year     = {1905},
-  doi      = {http://dx.doi.org/10.1002/andp.19053221004},
+  url      = {http://dx.doi.org/10.1002/andp.19053221004},
   keywords = {physics}
 }
 
@@ -27,11 +28,12 @@
   publisher = {Addison-Wesley},
   year      = {1973},
   chapter   = {1.2},
+  url       = {https://www-cs-faculty.stanford.edu/~knuth/taocp.html},
   keywords  = {knuth,programming}
 }
 
 @online{knuth-web,
-  author   = {Donald Knuth},
+  author   = {Donald E. Knuth},
   title    = {Knuth: Computers and Typesetting},
   url      = {http://www-cs-faculty.stanford.edu/~uno/abcde.html},
   addendum = {(accessed: 18.08.2020)},
