--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -8,7 +8,7 @@
 
 % \colorlet{mycolor}{green!70!yellow!80!orange!85!black} % todo
 % color=mycolor
-\usetheme[lightmode-fill]{digital-minimal}
+\usetheme[darkmode]{digital-minimal}
 
 \title{Example Presentation}
 \titlenumber{1}
