--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -26,7 +26,7 @@
 \setfootmarker{EidI~\faAngleRight\ Tutorium 1}
 
 \outro{\vfill\begin{center}
-    \huge\sbfamily Danketsöön
+    \huge\bfseries Danketsöön
 \end{center}\vfill}
 
 \begin{document}
