fine tune example

--- a/digital-minimal/example.tex
+++ b/digital-minimal/example.tex
@@ -8,7 +8,7 @@
 
 % \colorlet{mycolor}{green!70!yellow!80!orange!85!black} % todo
 % color=mycolor
-\usetheme[darkmode]{digital-minimal}
+\usetheme[lightmode-fill]{digital-minimal}
 
 \title{Example Presentation}
 \titlenumber{1}
@@ -21,12 +21,13 @@
 \email{florian.sihler@uni-ulm.de}
 
 \usepackage[backend=bibtex8,style=alphabetic]{biblatex}
+\usepackage{csquotes}
 \addbibresource{example.bib}
 
 \setfootmarker{EidI~\faAngleRight\ Tutorium 1}
 
 \outro{\vfill\begin{center}
-    \huge\bfseries Danketsöön
+    \huge\itshape Danketsöön
 \end{center}\vfill}
 
 \begin{document}
