clean up and fix modes

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -82,14 +82,14 @@
 \colorlet{btdm@foot}{gray}
 \colorlet{btdm@foot@page}{btdm@primary}
 }
-\@namedef{btdm@mode@lightmode-filled}{
+\@namedef{btdm@mode@lightmode-fill}{
 \def\btdm@defaultcolor{btdm@primary@default@light}
 \colorlet{btdm@primary}{\btdm@color}
 \colorlet{btdm@text}{black!99!gray}
 \colorlet{btdm@softtext}{gray!42!white!95!btdm@primary}
-\colorlet{btdm@frametitle}{btdm@primary}
-\colorlet{btdm@border@up}{lightgray!12!white}
-\colorlet{btdm@block}{black!90!btdm@primary!90!btdm@border@up}
+\colorlet{btdm@frametitle}{white!99!btdm@primary}
+\colorlet{btdm@border@up}{btdm@primary}
+\colorlet{btdm@block}{btdm@primary!60!btdm@text}
 \colorlet{btdm@background}{white!99!gray}
 \colorlet{btdm@border@down}{lightgray!12!white}
 \colorlet{btdm@foot}{gray}
