--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -17,7 +17,7 @@
 \DeclareVoidOption{darkmode}{\def\btdm@mode{darkmode}}
 \DeclareVoidOption{lightmode}{\def\btdm@mode{lightmode}}
 \DeclareVoidOption{lightmode-fill}{\def\btdm@mode{lightmode-fill}}
-\DeclareVoidOption{darkmode-soft}{\def\btdm@mode{darkmode-soft}}
+\DeclareVoidOption{darkmode-git}{\def\btdm@mode{darkmode-git}}
 
 \newif\ifbtdm@largetrig@
 \DeclareVoidOption{small-triangle}{\btdm@largetrig@false}
@@ -95,7 +95,7 @@
 \colorlet{btdm@foot}{gray}
 \colorlet{btdm@foot@page}{btdm@primary}
 }
-\@namedef{btdm@mode@darkmode-soft}{
+\@namedef{btdm@mode@darkmode-git}{
 \def\btdm@defaultcolor{btdm@primary@default@dark}
 \colorlet{btdm@primary}{\btdm@color}
 \definecolor{btdm@text}{RGB}{173,186,199}
