update readme and examples

--- a/digital-minimal/beamerthemedigital-minimal.sty
+++ b/digital-minimal/beamerthemedigital-minimal.sty
@@ -16,6 +16,7 @@
 % todo: maybe change to something more flexible with beamer color-themes
 \DeclareVoidOption{darkmode}{\def\btdm@mode{darkmode}}
 \DeclareVoidOption{lightmode}{\def\btdm@mode{lightmode}}
+\def\btdm@mode{lightmode-fill}
 \DeclareVoidOption{lightmode-fill}{\def\btdm@mode{lightmode-fill}}
 \DeclareVoidOption{darkmode-git}{\def\btdm@mode{darkmode-git}}
 
